--- a/teaching/s2024_top1.html
+++ b/teaching/s2024_top1.html
@@ -38,6 +38,8 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-04-12: <b>Announcements</b> The class will go online for today's 11:00 class. Watch the lecture through eCampus by April 26th.<br>
+2024-04-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>      
 2024-04-04: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 2024-03-17: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>    
 2024-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>  
@@ -92,12 +94,16 @@ Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addend
 
 
 <h2><p>Exam Schedules</p></h2>
-TBA<br>  <!--
-1st midterm exam: <FONT COLOR="#C40062">11 April (Tuesday) 13:00--13:50</FONT> in-class. <br>
-- Coverage: Chapters 3 and 4 of the main textbook and Handout 1 problems (2016 to 2020 problems only; 2021 to 2023 problems will be covered in the 2nd midterm) <br>
-- Total 4 questions.<br>
+
+Midterm exam: <FONT COLOR="#C40062">25 April (Thursday) 10:00--11:40</FONT> in-class. <br>
+- Coverage: Chapters 4, 5, 6, and 7 (only up what we covered by April 19th).<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+  
+  
+  <!--
 The average was 85.52. The maximum score achieved by a student was 100.<br><br>  
+
   
 2nd midterm exam: <FONT COLOR="#C40062">23 May (Tuesday) 13:00--13:50</FONT> in-class. <br>
 - Coverage: Chapter 5 of the main textbook, Chapters 1 and 3 of O'Neill's book (only those parts we covered), Handout 1 problems (2021 to 2023 problems), Handouts 2 and 3.<br>
