--- a/teaching/s2024_top1.html
+++ b/teaching/s2024_top1.html
@@ -38,6 +38,8 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-04-21: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>     
+2024-04-19: Today's lecture was video-recorded and is available at eCampus.<br>       
 2024-04-16: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
 2024-04-12: <b>Announcements</b> The class will go online for today's 11:00 class. Watch the lecture through eCampus by April 26th.<br>
 2024-04-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>      
@@ -58,6 +60,11 @@ Problems from Chapter 5 (Part 1): #5, 9, 10, 11, 14, 16, 19, 20, 33, 35, 55, 56,
   <b>Homework  #3</b> 15 problems.<br>
 Problems from Chapter 5 (Part 2): #44, 48, 50, 82, 87, 89<br> 
 Problems from Chapter 6: #7, 8, 10, 11, 13, 34, 35, 38, 39<br><br>  
+
+<b>Homework  #4</b> 11 problems.<br>
+Problems from Chapter 7: #2, 14, 23, 27, 32, 33, 35, 37, 38, 42, 43<br><br>    
+  
+  
   <!--
 
 <b>Homework  #2</b> 8 problems.<br>
