--- a/teaching/s2024_geom1.html
+++ b/teaching/s2024_geom1.html
@@ -41,6 +41,7 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2024-04-18: The midterm exam will cover up to Section 6.1.<br>  
 2024-04-11: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> The detail has been posted below.<br>    
 2024-04-11: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
 2024-04-11: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
@@ -128,7 +129,7 @@ Exercises in Section 6.4. p.63 #1<br><br>
 
 <h2><p>Exam Schedules</p></h2>
   The 1st midterm exam: <FONT COLOR="#C40062">25 April (Thursday) 13:00--14:40</FONT> in-class. <br>
-- Coverage: Chapters 1 to 6. Only up to those sections completely covered by April 18th will be covered.<br>
+- Coverage: Chapter 1 to Chapter 6 Section 1.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 
