--- a/teaching/s2024_top1.html
+++ b/teaching/s2024_top1.html
@@ -38,6 +38,7 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-04-21: The midterm exam will cover Chapters 4 to 7 including homework problems therein.<br>       
 2024-04-21: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>     
 2024-04-19: Today's lecture was video-recorded and is available at eCampus.<br>       
 2024-04-16: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
