--- a/teaching/s2024_geom1.html
+++ b/teaching/s2024_geom1.html
@@ -41,6 +41,9 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2024-04-28: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
+2024-04-28: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br> 
+2024-04-28: The midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Tuesday, May 7th 23:59. Please read the email announcement for more details.<br>     
 2024-04-18: The midterm exam will cover up to Section 6.1.<br>  
 2024-04-11: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> The detail has been posted below.<br>    
 2024-04-11: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
@@ -92,10 +95,6 @@ Exercises in Section 6.2. p.58 #2, 3, 4, 6<br>
 Exercises in Section 6.3. p.61 #1<br> 
 Exercises in Section 6.4. p.63 #1<br><br>
 
- 
-  <!--
-
-
 
 <b>Homework  #6</b> 8 problems.<br>
  Exercises in Section 7.1. p.68 #1, 2<br>
@@ -109,6 +108,12 @@ Exercises in Section 6.4. p.63 #1<br><br>
  Exercises in Section 8.4. p.83 #1<br>
  Exercises in Section 8.5. p.86 #1[(i)], 2[(i)]<br>
  
+ 
+ 
+  <!--
+
+
+
  
  <b>Homework  #8</b> 9 problems.<br>
  Exercises in Section 9.1. p.89 #1, 2<br>
@@ -128,13 +133,13 @@ Exercises in Section 6.4. p.63 #1<br><br>
 
 
 <h2><p>Exam Schedules</p></h2>
-  The 1st midterm exam: <FONT COLOR="#C40062">25 April (Thursday) 13:00--14:40</FONT> in-class. <br>
+  The midterm exam: <FONT COLOR="#C40062">25 April (Thursday) 13:00--14:40</FONT> in-class. <br>
 - Coverage: Chapter 1 to Chapter 6 Section 1.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-
+ The average was 48.17. The maximum score achieved by a student was 87.<br>
   <!--
- The average was 65.10. The maximum score achieved by a student was 100.<br>
+
  <br>
  
  The 2nd midterm exam: <FONT COLOR="#C40062">24 May (Wednesday) 17:00--17:50</FONT> in-class. <br>
