--- a/teaching/s2024_dg1.html
+++ b/teaching/s2024_dg1.html
@@ -36,6 +36,7 @@
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>     
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-04-28: The midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Tuesday, May 7th 23:59. Please read the email announcement for more details.<br>       
 2024-04-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>    
 2024-04-11: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>     
 2024-04-11: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
