--- a/teaching/s2024_top1.html
+++ b/teaching/s2024_top1.html
@@ -38,6 +38,8 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-04-30: The midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Tuesday, May 7th 23:59. Please read the email announcement for more details.<br>       
+2024-04-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>      
 2024-04-21: The midterm exam will cover Chapters 4 to 7 including homework problems therein.<br>       
 2024-04-21: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>     
 2024-04-19: Today's lecture was video-recorded and is available at eCampus.<br>       
@@ -112,10 +114,10 @@ Midterm exam: <FONT COLOR="#C40062">25 April (Thursday) 10:00--11:40</FONT> in-c
 - Coverage: Chapters 4, 5, 6, and 7 (only up what we covered by April 19th).<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-  
+  The average was 38.82. The maximum score achieved by a student was 92.<br><br>  
   
   <!--
-The average was 85.52. The maximum score achieved by a student was 100.<br><br>  
+
 
   
 2nd midterm exam: <FONT COLOR="#C40062">23 May (Tuesday) 13:00--13:50</FONT> in-class. <br>
