--- a/teaching/s2024_geom1.html
+++ b/teaching/s2024_geom1.html
@@ -41,6 +41,7 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2024-05-01: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by May 16th.<br> 
 2024-04-28: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
 2024-04-28: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br> 
 2024-04-28: The midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Tuesday, May 7th 23:59. Please read the email announcement for more details.<br>     
