--- a/teaching/s2024_geom1.html
+++ b/teaching/s2024_geom1.html
@@ -41,6 +41,9 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2024-05-15: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>  
+2024-05-15: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
+2024-05-15: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by May 29th.<br>  
 2024-05-01: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by May 16th.<br> 
 2024-04-28: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
 2024-04-28: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br> 
@@ -110,12 +113,6 @@ Exercises in Section 6.4. p.63 #1<br><br>
  Exercises in Section 8.5. p.86 #1[(i)], 2[(i)]<br>
  
  
- 
-  <!--
-
-
-
- 
  <b>Homework  #8</b> 9 problems.<br>
  Exercises in Section 9.1. p.89 #1, 2<br>
  Exercises in Section 9.2. p.93 #1, 2, 3, 4<br>
@@ -130,7 +127,6 @@ Exercises in Section 6.4. p.63 #1<br><br>
  Exercises in Section 12.1. p.118 #1[(i),(ii),(iii)]<br>
  Exercises in Section 12.2. p.121 #2<br><br>
  
---> 
 
 
 <h2><p>Exam Schedules</p></h2>
