--- a/teaching/s2024_dg1.html
+++ b/teaching/s2024_dg1.html
@@ -36,6 +36,9 @@
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>     
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-05-15: Those who did not receive handouts should email me to get a copy.<br>    
+2024-05-15: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
+2024-05-15: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>    
 2024-05-01: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by May 16th.<br>  
 2024-04-28: The midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Tuesday, May 7th 23:59. Please read the email announcement for more details.<br>       
 2024-04-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>    
@@ -72,16 +75,16 @@ Problems from O'Neill, Elementary Differential Geometry, p.40 Exercise #4, 5, 6,
 Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8<br>
 Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
 Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
-  
-  <!--
-
- 
 
 <b>Homework  #6</b> 7 problems.<br>
 Problems from Handout 2.<br><br> 
 
 <b>Homework  #7</b> 9 problems.<br>
 Problems from Handout 3.<br><br>      
+
+  
+  <!--
+
 
 <b>Homework  #8</b> 10 problems.<br>  
 Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32, 33.<br
@@ -96,7 +99,7 @@ Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addend
 
 
 <h2><p>Exam Schedules</p></h2>
-Midterm exam: <FONT COLOR="#C40062">24 April (Wednesday) 16:00--17:40</FONT> in-class. <br>
+Midterm exam: <FONT COLOR="#C40062">24 April (Wednesday) 16:00--17:40</FONT> in-class. <br>
 - Coverage: Chapters 3, 4, and 5 of the main textbook including Handout 1<br>
 - Total 8 questions.There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
