--- a/teaching/s2024_dg1.html
+++ b/teaching/s2024_dg1.html
@@ -36,7 +36,9 @@
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>     
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-05-15: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by May 29th.<br>  
 2024-05-15: Those who did not receive handouts should email me to get a copy.<br>    
+2024-05-15: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
 2024-05-15: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
 2024-05-15: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>    
 2024-05-01: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by May 16th.<br>  
@@ -83,12 +85,13 @@ Problems from Handout 2.<br><br>
 Problems from Handout 3.<br><br>      
 
   
+<b>Homework  #8</b> 10 problems.<br>  
+Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32, 33.<br>
+Problems from Chapter 8 Part 2: #17, 19(a), 28, 30, 34, 38.<br><br> 
+  
   <!--
 
 
-<b>Homework  #8</b> 10 problems.<br>  
-Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32, 33.<br
-Problems from Chapter 8 Part 2: #17, 19(a), 28, 30, 34, 38.<br><br> 
 
 <b>Homework  #8</b> 10 problems. Due Date: Before the final exam.<br>  
 Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32, 33.<br>
