--- a/teaching/s2024_geom1.html
+++ b/teaching/s2024_geom1.html
@@ -41,6 +41,8 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2024-05-27: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
+2024-05-27: Review report of the 1st course evaluation survey is available on eCampus.<br>
 2024-05-15: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>  
 2024-05-15: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
 2024-05-15: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by May 29th.<br>  
@@ -135,7 +137,15 @@ Exercises in Section 6.4. p.63 #1<br><br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
  The average was 48.17. The maximum score achieved by a student was 87.<br>
-  <!--
+  
+ Final Exam: <FONT COLOR="#C40062">13 June (Thursday) 13:00--14:40</FONT> in-class.<br>
+ - Coverage: Everything we covered in this course by June 9th including all homework problems.<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+<br> 
+
+ 
+ <!--
 
  <br>
  
