--- a/teaching/s2024_dg1.html
+++ b/teaching/s2024_dg1.html
@@ -36,6 +36,8 @@
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>     
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-05-27: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>   
+2024-05-27: Review report of the 1st course evaluation survey will not be posted because there is no items to address.<br>  
 2024-05-15: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by May 29th.<br>  
 2024-05-15: Those who did not receive handouts should email me to get a copy.<br>    
 2024-05-15: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
@@ -107,6 +109,13 @@ Midterm exam: <FONT COLOR="#C40062">24 April (Wednesday) 16:00--17:40</FONT> in-
 - Total 8 questions.There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 The average was 59.31. The maximum score achieved by a student was 96.<br><br>  
+
+ Final Exam: <FONT COLOR="#C40062">14 June (Friday) 10:00--11:40</FONT> in-class. <br>
+- Coverage: Everything covered in this course including all homework problems.<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+<br>
+<br>  
   
   <!--
 
