--- a/teaching/s2024_top1.html
+++ b/teaching/s2024_top1.html
@@ -38,6 +38,8 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-05-27: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>   
+2024-05-27: Review report of the 1st course evaluation survey will not be posted because there is no items to address.<br>    
 2024-05-21: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br> 
 2024-05-21: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br> 
 2024-04-30: The midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Tuesday, May 7th 23:59. Please read the email announcement for more details.<br>       
@@ -75,39 +77,7 @@ Problems from Chapter 8: #3, 4, 18, 19, 30, 33, 35, 36, 40, 46, 50, 51, 52, 55, 
   <b>Homework  #6</b> 14 problems.<br>
 Problems from Chapter 9: #10, 14, 17, 20, 22, 26, 27, 28, 29, 31, 34, 35, 36, 38<br><br>    
   
-  <!--
-
-
-<b>Homework  #4</b> 12 problems.<br>
-Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>  
-Problems from the National Exam: <a href="s2023_dg1/handout1.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
- 
-
-<b>Homework  #5</b>  20 problems.<br>
-Problems from Chapter 5: #5, 7, 8<br>
-Problems from O'Neill, Elementary Differential Geometry, p.15 Exercise #3, 4, 5<br>
-Problems from O'Neill, Elementary Differential Geometry, p.22 Exercise #6<br>
-Problems from O'Neill, Elementary Differential Geometry, p.40 Exercise #4, 5, 6, 7, 8, 9, 10<br>  
-Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8<br>
-Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
-Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
-
-<b>Homework  #6</b> 7 problems.<br>
-Problems from Handout 2.<br><br> 
-
-<b>Homework  #7</b> 9 problems.<br>
-Problems from Handout 3.<br><br>      
-
-<b>Homework  #8</b> 10 problems.<br>  
-Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32, 33.<br
-Problems from Chapter 8 Part 2: #17, 19(a), 28, 30, 34, 38.<br><br> 
-
-<b>Homework  #8</b> 10 problems. Due Date: Before the final exam.<br>  
-Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32, 33.<br>
-<strike>Problems from Chapter 8 Part 2: #17, 19(a), 28, 30, 34, 38.</strike><br><br>
--->
-
-
+<b>Homework  #7</b> TBA<br><br>
 
 
 <h2><p>Exam Schedules</p></h2>
@@ -117,7 +87,13 @@ Midterm exam: <FONT COLOR="#C40062">25 April (Thursday) 10:00--11:40</FONT> in-c
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
   The average was 38.82. The maximum score achieved by a student was 92.<br><br>  
-  
+
+Final Exam: <FONT COLOR="#C40062">13 June (Thursday) 10:00--11:40</FONT> in-class. <br>
+- Coverage: Everything covered in this course including all homework problems.<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+<br>
+<br>    
   <!--
 
 
