--- a/teaching/s2024_geom1.html
+++ b/teaching/s2024_geom1.html
@@ -41,6 +41,7 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2024-06-02: <b>Announcements</b> The class will go online for June 6th 13:00 class. Watch the lecture through eCampus by the final exam day.<br>   
 2024-05-27: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2024-05-27: Review report of the 1st course evaluation survey is available on eCampus.<br>
 2024-05-15: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>  
