--- a/teaching/s2024_top1.html
+++ b/teaching/s2024_top1.html
@@ -38,6 +38,7 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-06-02: We will not meet on June 14th Friday at 11:00, and instead, there will be a make-up class on June 7th 10:00 at E1-1 Room 140.<br>
 2024-05-27: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>   
 2024-05-27: Review report of the 1st course evaluation survey will not be posted because there is no items to address.<br>    
 2024-05-21: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br> 
