--- a/teaching/s2024_top1.html
+++ b/teaching/s2024_top1.html
@@ -38,7 +38,10 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
-2024-06-02: We will not meet on June 14th Friday at 11:00, and instead, there will be a make-up class on June 7th 10:00 at E1-1 Room 140.<br>
+2024-06-04: We will not meet on Fridays June 7th and the 14th. These classes will go online. Watch the lecture through eCampus by the final exam date.<br>
+2024-06-04: The class will go online for June 6th the Memorial day. Watch the lecture through eCampus by the final exam date.<br>    
+2024-06-04: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br> 
+2024-06-02: <s>We will not meet on June 14th Friday at 11:00, and instead, there will be a make-up class on June 7th 10:00 at E1-1 Room 140.<\s><br>
 2024-05-27: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>   
 2024-05-27: Review report of the 1st course evaluation survey will not be posted because there is no items to address.<br>    
 2024-05-21: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br> 
@@ -78,7 +81,8 @@ Problems from Chapter 8: #3, 4, 18, 19, 30, 33, 35, 36, 40, 46, 50, 51, 52, 55, 
   <b>Homework  #6</b> 14 problems.<br>
 Problems from Chapter 9: #10, 14, 17, 20, 22, 26, 27, 28, 29, 31, 34, 35, 36, 38<br><br>    
   
-<b>Homework  #7</b> TBA<br><br>
+  <b>Homework  #7</b> 11 problems.<br>
+Problems from Chapter 10: #5, 6, 7, 13, 22, 24, 31, 33, 34, 37, 38<br><br>    
 
 
 <h2><p>Exam Schedules</p></h2>
