--- a/teaching/s2024_top1.html
+++ b/teaching/s2024_top1.html
@@ -41,7 +41,7 @@
 2024-06-04: We will not meet on Fridays June 7th and the 14th. These classes will go online. Watch the lecture through eCampus by the final exam date.<br>
 2024-06-04: The class will go online for June 6th the Memorial day. Watch the lecture through eCampus by the final exam date.<br>    
 2024-06-04: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br> 
-2024-06-02: <s>We will not meet on June 14th Friday at 11:00, and instead, there will be a make-up class on June 7th 10:00 at E1-1 Room 140.</s>s><br>
+2024-06-02: <s>We will not meet on June 14th Friday at 11:00, and instead, there will be a make-up class on June 7th 10:00 at E1-1 Room 140.</s><br>
 2024-05-27: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>   
 2024-05-27: Review report of the 1st course evaluation survey will not be posted because there is no items to address.<br>    
 2024-05-21: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br> 
