--- a/teaching/s2024_top1.html
+++ b/teaching/s2024_top1.html
@@ -38,6 +38,7 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-06-13: Please respond by June 19th noon if you want to see your graded final exam papers or if you want to receive the result by email. Please read the email announcement.<br>  
 2024-06-04: We will not meet on Fridays June 7th and the 14th. These classes will go online. Watch the lecture through eCampus by the final exam date.<br>
 2024-06-04: The class will go online for June 6th the Memorial day. Watch the lecture through eCampus by the final exam date.<br>    
 2024-06-04: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br> 
