--- a/index.html
+++ b/index.html
@@ -81,10 +81,9 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 
 <h2><p>Teaching</p></h2>
 <dl>
-<dd><a href="teaching/s2024_srp1.html">Special Research Project I</a> (Graduate Course)</dd>    
-<dd><a href="teaching/s2024_top1.html">General Topology I</a></dd>  
-<dd><a href="teaching/s2024_dg1.html">Differential Geometry I</a></dd>
-<dd><a href="teaching/s2024_geom1.html">Geometry for teachers</a></dd>
+<dd><a href="teaching/f2024_srp2.html">Special Research Project II</a> (Graduate Course)</dd>    
+<dd><a href="teaching/f2024_tig1.html">Topics in Geometry I</a> (Graduate Course)</dd>
+<dd><a href="teaching/f2024_dg2.html">Differential Geometry II</a></dd>
 </dl>
 <ul>
   <li><a href="teaching/pastcourses.html">Past courses</a></li>
