--- a/teaching/s2024_top1.html
+++ b/teaching/s2024_top1.html
@@ -38,6 +38,7 @@
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-06-24: Letter grades have been submitted. Enjoy your summer break.<br>  
 2024-06-13: Please respond by June 19th noon if you want to see your graded final exam papers or if you want to receive the result by email. Please read the email announcement.<br>  
 2024-06-04: We will not meet on Fridays June 7th and the 14th. These classes will go online. Watch the lecture through eCampus by the final exam date.<br>
 2024-06-04: The class will go online for June 6th the Memorial day. Watch the lecture through eCampus by the final exam date.<br>    
@@ -98,8 +99,7 @@ Final Exam: <FONT COLOR="#C40062">13 June (Thursday) 10:00--11:40</FONT> in-clas
 - Coverage: Everything covered in this course including all homework problems.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-<br>
-<br>    
+  The average was 50. The maximum score achieved by a student was 100.<br><br>     
   <!--
 
 
