--- a/teaching/s2024_dg1.html
+++ b/teaching/s2024_dg1.html
@@ -36,6 +36,7 @@
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>     
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-06-24: Letter grades have been submitted. Enjoy your summer break.<br>   
 2024-06-13: Please respond by June 19th noon if you want to see your graded final exam papers or if you want to receive the result by email. Please read the email announcement.<br>    
 2024-05-27: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>   
 2024-05-27: Review report of the 1st course evaluation survey will not be posted because there is no items to address.<br>  
@@ -115,25 +116,10 @@ The average was 59.31. The maximum score achieved by a student was 96.<br><br>
 - Coverage: Everything covered in this course including all homework problems.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-<br>
+The average was 52.11. The maximum score achieved by a student was 94.<br><br> 
 <br>  
   
-  <!--
-
-  
-2nd midterm exam: <FONT COLOR="#C40062">23 May (Tuesday) 13:00--13:50</FONT> in-class. <br>
-- Coverage: Chapter 5 of the main textbook, Chapters 1 and 3 of O'Neill's book (only those parts we covered), Handout 1 problems (2021 to 2023 problems), Handouts 2 and 3.<br>
-- Total 4 questions.<br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-The average was 76.39. The maximum score achieved by a student was 100.<br>
-<br>  
- Final Exam: <FONT COLOR="#C40062">14 June (Wednesday) 10:00--11:40</FONT> in-class. <br>
-- Coverage: Everything covered in this course including all homework problems.<br>
-- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-The average was 62.57. The maximum score achieved by a student was 89.<br>
-<br>  
- -->
+ 
 
 
 <h2><p>Assessment of Project-Based Learning (PBL)</p></h2>
