--- a/teaching/pastcourses.html
+++ b/teaching/pastcourses.html
@@ -11,7 +11,7 @@
 <h2><p>Courses taught in previous semesters</p></h2>
 <dl>
   <dt><b>Chungbuk National University</b></dt>
-  <dd>Spring 2024: <a href="teaching/s2024_srp1.html">Special Research Project I</a> (Graduate Course), <a href="teaching/s2024_top1.html">General Topology I</a>, <a href="teaching/s2024_dg1.html">Differential Geometry I</a>, <a href="teaching/s2024_geom1.html">Geometry for teachers</a></dd> 
+  <dd>Spring 2024: <a href="../teaching/s2024_srp1.html">Special Research Project I</a> (Graduate Course), <a href="../teaching/s2024_top1.html">General Topology I</a>, <a href="../teaching/s2024_dg1.html">Differential Geometry I</a>, <a href="../teaching/s2024_geom1.html">Geometry for teachers</a></dd> 
   <dd>Fall 2023: <a href="../teaching/f2023_dg2.html">Differential Geometry II</a>, <a href="../teaching/f2023_calc2.html">Calculus II</a></dd>      
   <dd>Spring 2023: <a href="../teaching/s2023_calc1.html">Calculus I</a>, <a href="../teaching/s2023_introgeom.html">Introduction to Geometry</a>, <a href="../teaching/s2023_geom1.html">Geometry for teachers</a>, <a href="../teaching/s2023_dg1.html">Differential Geometry I</a></dd>      
         <dd>Fall 2022: <a href="../teaching/f2022_athmme.html">Advanced Topics in History of Mathematics and Mathematics Education</a> (Graduate Course), <a href="../teaching/f2022_dg2.html">Differential Geometry II</a>, <a href="../teaching/f2022_calc2.html">Calculus II</a></dd>  
