--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <h2><p>About me</p></h2>
-I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a> and the Associate Dean of the <a href=https://edu.chungbuk.ac.kr/www/index.do>College of Education</a> at the <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
+I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a>, <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
 
   
   
@@ -21,8 +21,7 @@ Here is my <a href="CV_Park.pdf">CV</a>. <!-- My research is supported by the <a
 <b>Address:</b> Department of Mathematics Education, Chungbuk National University, 1 Chungdaero Seowon-Gu, Cheongju 28644, Republic of Korea<br><br>
 <b>Office:</b> E1-1 Room 110<br><br>
 <b>Phone:</b> +82-43-261-2721<br><br>
-<b>Associate Dean's Office:</b> E1-2 Room 246<br><br>
-<b>Phone:</b> +82-43-261-2641<br><br>
+
 
 <!--  I am an Adjunct Assistant Professor at <a href="http://www.hunter.cuny.edu/">CUNY Hunter College</a> and <a href="http://www.bcc.cuny.edu/">CUNY Bronx Community College</a> in New York City.<br><br> -->
 
@@ -222,7 +221,7 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 <!--
 <a href="4214-06/4214-06.html">4214-06</a><br><br>-->
 
-Last Updated: 4 March 2024
+Last Updated: 3 September 2024
 
 </font>
 </body>
