--- a/teaching/f2024_dg2.html
+++ b/teaching/f2024_dg2.html
@@ -37,24 +37,30 @@
 2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below. This day is the make-up day for the CBNU anniversary (Wednesday September 27th).<br>     
 2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2024-09-22: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
+2024-09-22: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
+2024-09-22: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
+2024-09-19: The December 18th 14:00 class will go online. Please see the email announcement for more details.<br>      
 2024-09-01: <b>Announcements</b> <a href="../teaching/f2024_dg2/2024-09-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
 2024-09-01: Welcome!<br>
 
 
 <h2><p>Homework</p></h2>
-TBA<br>
-
-<!-- <b>Homework  #1</b> 16 problems.<br>
+<b>Homework  #1</b> 16 problems.<br>
 Problems from Chapter 9 Part 1: #1, 2, 4, 6, 33, 34, 35, 37, 38, 40.<br>
 Problems from Chapter 9 Part 2: #7, 9, 12, 41, 42, 43.<br>  
   <br> 
 
 <b>Homework  #2</b> 14 problems.<br>  
-Problems from the National Exam: <a href="f2023_dg2/handout1.pdf" title="Selected problems from the national exam">Handout 1</a>.<br><br>  
+Problems from the National Exam: <a href="f2024_dg2/handout1.pdf" title="Selected problems from the national exam">Handout 1</a>.<br><br>  
   
 <b>Homework  #3</b> 12 problems.<br>  
 Problems from Chapter 9 Part 3: #10, 21, 22, 44, 48.<br>
-Problems from Chapter 9 Part 4: #26, 27, 45, 46, 47, 52, 55.<br><br>  
+Problems from Chapter 9 Part 4: #26, 27, 45, 46, 47, 52, 55.<br><br>
+  
+<!-- 
+
+  
 
 <b>Homework  #4</b> 13 problems.<br>
 Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br>
