--- a/teaching/f2024_dg2.html
+++ b/teaching/f2024_dg2.html
@@ -37,6 +37,10 @@
 2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below. This day is the make-up day for the CBNU anniversary (Wednesday September 27th).<br>     
 2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2024-10-10: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
+2024-10-10: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> Details have been posted below.<br>       
+2024-10-02: The December 24th 14:00 class will go online. Please see the email announcement for more details.<br>      
+2024-10-02: The December 23rd 10:00 class will go online. Please see the email announcement for more details.<br>        
 2024-09-22: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2024-09-22: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2024-09-22: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
@@ -57,14 +61,14 @@ Problems from the National Exam: <a href="f2024_dg2/handout1.pdf" title="Selecte
 <b>Homework  #3</b> 12 problems.<br>  
 Problems from Chapter 9 Part 3: #10, 21, 22, 44, 48.<br>
 Problems from Chapter 9 Part 4: #26, 27, 45, 46, 47, 52, 55.<br><br>
-  
-<!-- 
-
-  
-
+ 
 <b>Homework  #4</b> 13 problems.<br>
 Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br>
 Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
+  
+<!-- 
+
+ 
 
 <b>Homework  #5</b> 9 problems.<br>
 Problems from the National Exam: <a href="f2023_dg2/handout2.pdf" title="Selected problems from the national exam">Handout 2</a>.<br><br>    
@@ -83,13 +87,13 @@ Problems from the National Exam: <a href="f2023_dg2/handout3.pdf" title="Selecte
 
 <h2><p>Exam Schedules</p></h2>
 
-Midterm Exam: TBA<br> 
-
-
-<!-- <FONT COLOR="#C40062">25 October (Wednesday),</FONT> In-class.<br>
-- Coverage: Chapter 9 (up to p.186 and corresponding problems; i.e., up to what we cover by October 18th).<br>
+Midterm Exam:  <FONT COLOR="#C40062">24 October (Thursday),</FONT> In-class.<br>
+- Coverage: Chapter 9.<br>
 - Total 7 questions. There will be 1 set of T/F questions. Some problems will be identical or closely related to homework problems.<br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br> 
+<br> 
+
+<!--
 - The average was 74 and the maximum score achieved by a student was 98.<br><br>
 
 -->
