--- a/teaching/f2024_dg2.html
+++ b/teaching/f2024_dg2.html
@@ -88,7 +88,7 @@ Problems from the National Exam: <a href="f2023_dg2/handout3.pdf" title="Selecte
 <h2><p>Exam Schedules</p></h2>
 
 Midterm Exam:  <FONT COLOR="#C40062">24 October (Thursday),</FONT> In-class.<br>
-- Coverage: Chapter 9.<br>
+- Coverage: Chapter 9. If we could not finish this chapter by October 23rd, then what we covered up to October 23rd will be the coverage.<br>
 - Total 7 questions. There will be 1 set of T/F questions. Some problems will be identical or closely related to homework problems.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br> 
 <br> 
