--- a/teaching/f2024_dg2.html
+++ b/teaching/f2024_dg2.html
@@ -37,6 +37,8 @@
 2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below. This day is the make-up day for the CBNU anniversary (Wednesday September 27th).<br>     
 2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2024-10-21: During the practice teaching period, classes (October 30th, 31st, November 6th, 7th, 13th, 14th) will go online. Please see the email announcement for more details.<br>          
+2024-10-21: The October 30th 14:00 class will go online. Please see the email announcement for more details.<br>      
 2024-10-10: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
 2024-10-10: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> Details have been posted below.<br>       
 2024-10-02: The December 24th 14:00 class will go online. Please see the email announcement for more details.<br>      
