--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 <dl>
 <dd><a href="teaching/f2024_srp2.html">Special Research Project II</a> (Graduate Course)</dd>    
 <dd><a href="teaching/f2024_tig1.html">Topics in Geometry I</a> (Graduate Course)</dd>
+<dd><a href="teaching/f2024_ge.html">Geometry and education</a></dd>
 <dd><a href="teaching/f2024_dg2.html">Differential Geometry II</a></dd>
 </dl>
 <ul>
