--- a/teaching/f2024_dg2.html
+++ b/teaching/f2024_dg2.html
@@ -15,7 +15,7 @@
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
 <b>Office Hours:</b> Wednesdays 15:00--15:50 at E1-1 #110 or by appointment.<br> 
-<b>Syllabus:</b>  <a href="f2024_dg2/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
+<b>Syllabus:</b>  <a href="f2024_dg2/courseoutline_updated.pdf" title="Open Course Outline">PDF</a> (updated)<br>
 
 
 <h2><p>Announcements</p></h2>
@@ -37,6 +37,7 @@
 2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below. This day is the make-up day for the CBNU anniversary (Wednesday September 27th).<br>     
 2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2024-11-26: The Google Form for you to submit your PBL project is ready. Please submit it by November 30th.<br>      
 2024-10-21: During the practice teaching period, classes (October 30th, 31st, November 6th, 7th, 13th, 14th) will go online. Please see the email announcement for more details.<br>          
 2024-10-21: The October 30th 14:00 class will go online. Please see the email announcement for more details.<br>      
 2024-10-10: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
@@ -115,7 +116,7 @@ Final Exam: TBA<br>
 For an extra credit, you should record a 20-minute long video lecture about one of the following:<br>
 (1) A sample lecture on any topic listed on the syllabus of this course.<br>
 (2) A sample lecture on a concept from secondary school geometry curricular.<br><br>
-You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/ZBzUXc43J9sPujZh7" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
+You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/9TZUt4RBTwed7ULE7" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
   
 Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into “private” or even delete the video after your letter grade for this course is assigned.<br><br>
 
