--- a/teaching/s2024_geom1.html
+++ b/teaching/s2024_geom1.html
@@ -15,7 +15,7 @@
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
 <b>Office Hours:</b> Wednesdays 15:00--15:50 at E1-1 Room 110.<br>
-<b>Syllabus:</b>  <a href="s2024_geom1/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
+<b>Syllabus:</b>  <a href="s2024_geom1/courseoutline_updated.pdf" title="Open Course Outline">PDF</a> (updated)<br>
 
 
 <h2><p>Announcements</p></h2>
