--- a/teaching/f2024_dg2.html
+++ b/teaching/f2024_dg2.html
@@ -37,7 +37,11 @@
 2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below. This day is the make-up day for the CBNU anniversary (Wednesday September 27th).<br>     
 2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2024-11-28: If you want to see your graded paper of the upcoming final exam or to just receive your score by email, please email me no later than Thursday, December 12th 23:59. Please read the email announcement for more details.<br>
+2024-11-28: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>       
+2024-11-28: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>    
 2024-11-26: The Google Form for you to submit your PBL project is ready. Please submit it by November 30th.<br>      
+2024-11-20: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
 2024-10-21: During the practice teaching period, classes (October 30th, 31st, November 6th, 7th, 13th, 14th) will go online. Please see the email announcement for more details.<br>          
 2024-10-21: The October 30th 14:00 class will go online. Please see the email announcement for more details.<br>      
 2024-10-10: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
@@ -72,12 +76,13 @@ Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
 <b>Homework  #5</b> 11 problems.<br>
 Problems from the National Exam: <a href="f2024_dg2/handout2.pdf" title="Selected problems from the national exam">Handout 2</a>.<br><br>    
 
+<b>Homework  #6</b> 3 problems.<br>
+Problems from the National Exam: <a href="f2024_dg2/handout3.pdf" title="Selected problems from the national exam">Handout 3</a>.<br><br>    
   
 <!-- 
 
  
-<b>Homework  #6</b> 2 problems.<br>
-Problems from the National Exam: <a href="f2024_dg2/handout3.pdf" title="Selected problems from the national exam">Handout 3</a>.<br><br>    
+
 --> 
   
 <!--
@@ -101,15 +106,13 @@ Midterm Exam:  <FONT COLOR="#C40062">24 October (Thursday),</FONT> In-class.<br>
 
 
 -->
-Final Exam: TBA<br>
-
- <!-- 
- <FONT COLOR="#C40062">15 December (Friday),</FONT> 10:00--11:40 at E1-1 Room 136.<br>
+Final Exam:  <FONT COLOR="#C40062">12 December (Thursday),</FONT> 10:00--11:40 at E1-1 Room 136.<br>
 - Coverage: Everything we covered during this semester including all homework assignments.<br>
 - Total 6 questions. There will be 1 set of T/F questions. Some problems will be identical or closely related to homework problems.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-- Dispute meetings are planned to be scheduled on December 20th, 2023 during 13:00--14:00.<br>
-- The average was 68.41 and the maximum score achieved by a student was 98.<br><br>
+- Dispute meetings are planned to be scheduled on December 19th, 2024 during 10:00--12:00.<br>
+<!-- - The average was 68.41 and the maximum score achieved by a student was 98.<br><br> 
+
 -->
   
 <h2><p>Assessment of Project-Based Learning (PBL)</p></h2>
