--- a/teaching/f2024_tig1.html
+++ b/teaching/f2024_tig1.html
@@ -14,7 +14,7 @@
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
 <b>Office Hours:</b> By appointment.<br>
-<b>Syllabus:</b>  <a href="f2024_tig1/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
+<b>Syllabus:</b>  <a href="f2024_tig1/courseoutline_updated.pdf" title="Open Course Outline">PDF</a><br>
 
 
 <h2><p>Announcements</p></h2>
@@ -23,9 +23,8 @@
 2022-07-21: On Monday July the 25th, I will have to go on a business trip. We will make it up by online classes. Please see Week 8 of course materials in our CBNU eCampus.<br>
 2021-07-14: Welcome again!<br>
 -->
-  
+2024-12-04: The class meeting schedule from Weeks 8 to 15 has been changed. Please see the updated course outline for details.<br>  
 2024-09-01: Welcome! Our first day of class is October 30th.<br>
-
 
 <h2><p>Exam Schedules</p></h2>
 Final Exam: <FONT COLOR="#C40062">23 January 2025 (Thursday)</FONT> in-class.<br>
